@@ -12,7 +12,8 @@ void inbound_join (server *serv, char *chan, char *user, char *ip);
 void inbound_ujoin (server *serv, char *chan, char *nick, char *ip);
 void inbound_topictime (server *serv, char *chan, char *nick, time_t stamp);
 void inbound_topic (server *serv, char *chan, char *topic_text);
-int inbound_user_info (session *sess, char *outbuf, char *chan, char *user, char *host, char *servname, char *nick, char *realname);
+void inbound_user_info_start (session *sess, char *nick);
+int inbound_user_info (session *sess, char *outbuf, char *chan, char *user, char *host, char *servname, char *nick, char *realname, unsigned int away);
 void inbound_foundip (session *sess, char *ip);
 void inbound_banlist (session *sess, time_t stamp, char *chan, char *mask, char *banner);
 void inbound_ping_reply (session *sess, char *outbuf, char *timestring, char *from);
