@@ -11,7 +11,9 @@
  - Allow fullpath and relative filenames for Text Events sound files
    (Anthony Dragunov).
  - Added /GUI command (mainly for use by scripts).
- - 
+ - Added -n, --no-plugins command-line arg.
+ - Added a feature to change the color of away users.
+ - Fixed incorrect dcc cps calculation.
  - 
  - 
 
